--- a/frontend/src/components/RadarVisualization.css
+++ b/frontend/src/components/RadarVisualization.css
@@ -14,6 +14,14 @@
   width: 100%;
   max-width: 100vw;
   height: auto;
+  user-select: none;
+  touch-action: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+}
+
+.radar-visualization canvas:active {
+  cursor: grabbing;
 }
 
 .controls {
